feat: added change status business logic
